[project]
name = "cli_dungeon_run_ElodinLaarz"
version = "0.0.1"
authors = [
  { name="Caleb Geiger", email="caleblgeiger@gmail.com" },
]
description = "A simple text-based dungeon crawler."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Probably Windows...",
]

[project.urls]
"Homepage" = "https://github.com/ElodinLaarz/cli-dungeon-run"
